Fix tree item margin. Add human readable permissions.

--- a/ui/app/styles/app.css
+++ b/ui/app/styles/app.css
@@ -19,7 +19,6 @@
 .treeViewItem {
   padding: 5px !important;
   display: inline-block;
-  margin: 2px !important;
   text-align: center;
 }
 
